# rust-durable-functions

./: .gitignore  LICENSE  README.md
cdk/: .env.example  cdk.json  package-lock.json  package.json
cdk/lib/config/environments/: dev.ts  index.ts
cdk/lib/constructs/: parameter-store-string.ts
cdk/lib/constructs/lambda/: go-lambda-function-builder.ts  lambda-function-builder.base.ts  nodejs-lambda-function-builder.ts  rust-lambda-function-builder.ts
cdk/lib/constructs/secrets/: external-db-secret.ts
cdk/lib/stacks/: simple-lab.ts
cdk/lib/stacks/lab/: index.ts
cdk/lib/types/: environment.ts  error.ts  http.ts  lambda.ts  utility.ts
cdk/lib/utils/: constants.ts  error.ts  iam-policies.ts  load-env.ts  prefix.ts
docs/reports/: rust-vs-nodejs-claude-code-bedrock-comparison.md
src/lambda/layers/claude-code/nodejs/: package-lock.json  package.json
src/lambda/nodejs/nodejs-cc-bedrock-orchestrator/: index.ts  package-lock.json  package.json
src/lambda/rust/: Cargo.toml
src/lambda/rust/callback-sender/: Cargo.toml
src/lambda/rust/callback-sender/src/: main.rs
src/lambda/rust/claude-code-bedrock-orchestrator/: Cargo.toml
src/lambda/rust/claude-code-bedrock-orchestrator/src/: main.rs
src/lambda/rust/claude-code-orchestrator/: Cargo.toml
src/lambda/rust/claude-code-orchestrator/src/: main.rs
src/lambda/rust/order-processor/: Cargo.toml
src/lambda/rust/order-processor/src/: main.rs
src/lambda/rust/orders-fetcher/: Cargo.toml
src/lambda/rust/orders-fetcher/src/: main.rs
src/lambda/rust/report-orchestrator/: Cargo.toml
src/lambda/rust/report-orchestrator/src/: main.rs
src/lambda/rust/report-saver/: Cargo.toml
src/lambda/rust/report-saver/src/: main.rs
src/lambda/rust/shared/: Cargo.toml
src/lambda/rust/shared/src/: lib.rs
