[workspace]
resolver = "3"
members = ["order-processor", "callback-sender", "shared"]
exclude = ["packages/.claude"]

[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["Luis Carlos Osorio Jayk"]

[workspace.dependencies]
lambda_runtime = "1.0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "tracing"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "cookies", "form"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
mime = "0.3.17"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
http = "1.4.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
durable-execution-sdk = "0.1.0-alpha2"
aws-sdk-dynamodb = "1.108.0"
aws-sdk-lambda = "1"
lambda_http = "1.1.1"
shared = { path = "shared" }