[package]
name = "callback-sender"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
lambda_http.workspace = true
aws-sdk-lambda.workspace = true
aws-sdk-dynamodb.workspace = true
aws-config.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
shared.workspace = true
