[package]
name = "order-processor"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
lambda_runtime.workspace = true
aws-sdk-dynamodb.workspace = true
aws-config.workspace = true
tokio.workspace = true
durable-execution-sdk.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
shared.workspace = true
