[package]
name = "report-orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
lambda_runtime.workspace = true
aws-sdk-bedrockruntime.workspace = true
aws-sdk-lambda.workspace = true
aws-sdk-sns.workspace = true
aws-config.workspace = true
tokio.workspace = true
durable-execution-sdk.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
aws-smithy-types.workspace = true
shared.workspace = true
