[package]
name = "report-saver"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
lambda_runtime.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-lambda.workspace = true
aws-config.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
